--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -7,6 +7,10 @@
   border-bottom: 2px solid #e5e5e5;
   flex-wrap: wrap;
   gap: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .headerContent {
